--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
         <header class="bg-white shadow dark:bg-gray-800">
             <div class="container mx-auto p-5 flex justify-between items-center">
                 <!-- Logo/Title -->
-                <h1 class="text-2xl font-bold">Agil Aryaddinata Abbas</h1>
+                <h1 class="text-lg font-bold">Agil Aryaddinata Abbas</h1>
 
                 <!-- Nav Menu for Desktop -->
                 <nav class="hidden md:flex space-x-4">
