--- a/src/index.html
+++ b/src/index.html
@@ -411,7 +411,7 @@
             </section>
 
             <!-- GitHub Contribution Section -->
-            <section id="github-contributions" class="text-gray-600 dark:text-gray-300 body-font py-10">
+            <!-- <section id="github-contributions" class="text-gray-600 dark:text-gray-300 body-font py-10">
                 <div class="container mx-auto text-center">
                     <h1 class="sm:text-3xl text-2xl font-medium title-font text-gray-900 dark:text-gray-100">
                         <i class="fa-brands fa-github"></i> GitHub Contributions
@@ -425,14 +425,12 @@
                     <div class="bg-gray-200 dark:bg-gray-800 p-5 rounded-lg mt-8">
 
                         <div id="contribution-total" class="text-center font-semibold mb-4">
-                            <!-- Contribution total will be added here by JavaScript -->
                         </div>
                         <div id="contribution-grid" class="grid grid-cols-52 gap-1 mb-4">
-                            <!-- Contribution boxes will be added here by JavaScript -->
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
 
             <!-- Projects -->
             <section id="projects" class="text-gray-600 dark:text-gray-300 body-font">
